--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,16 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:18.3.0'
     implementation 'com.google.android.gms:play-services-games:18.0.1'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.android.gms:play-services-vision:19.0.0'
+
+
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
         transitive = true
     }
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
+
 
 
 
